--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
+    "dayjs": "^1.11.7",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
