--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dayjs": "^1.11.7",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
+    "preline": "^1.7.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.2",
     "superjson": "1.9.1",
