--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate && npx prisma db push",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
@@ -45,7 +46,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.0",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "husky": "^8.0.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.0.1"
