--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
@@ -39,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.7",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.1",
     "husky": "^8.0.0",
@@ -58,5 +61,15 @@
       "eslint --fix",
       "prettier --write"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
