--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate && npx prisma db push",
+    "postinstall": "prisma generate",
     "lint": "set SKIP_ENV_VALIDATION=true && next lint",
     "start": "next start",
     "prepare": "husky install"
@@ -21,7 +21,7 @@
     "@trpc/server": "^10.7.0",
     "dayjs": "^1.11.7",
     "next": "13.1.1",
-    "next-auth": "^4.18.7",
+    "next-auth": "^4.22.1",
     "preline": "^1.7.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
