--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "set SKIP_ENV_VALIDATION=true && next lint",
+    "lint": "next lint",
     "start": "next start",
     "prepare": "husky install"
   },
