--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@
 
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 # Prisma
-DATABASE_URL=file:./db.sqlite
+
+DATABASE_URL=mysql://root:admin@localhost:3306/super-secret-santa
 
 # Next Auth
 # You can generate the secret via 'openssl rand -base64 32' on Linux
@@ -15,5 +16,8 @@ DATABASE_URL=file:./db.sqlite
 NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth Discord Provider
+
+# REQUIRED
 DISCORD_CLIENT_ID=
+# REQUIRED
 DISCORD_CLIENT_SECRET=
