feat: add initial attempt at discord bot

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,9 @@ NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth Discord Provider
 
-# REQUIRED
+# Required
 DISCORD_CLIENT_ID=
-# REQUIRED
+# Required
 DISCORD_CLIENT_SECRET=
+# Optional
+DISCORD_BOT_TOKEN=
