--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+
+      - name: Run lint
+        run: yarn lint
+
+      - name: Build
+        run: yarn build
