--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
     "dayjs": "^1.11.7",
+    "discord.js": "^14.11.0",
     "next": "13.1.1",
     "next-auth": "^4.22.1",
     "preline": "^1.7.0",
