chore: fix env variables

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 # Optional
 DISCORD_BOT_TOKEN=
+
+# TODO: Share server-side client ID env with client
+NEXT_PUBLIC_DISCORD_CLIENT_ID=
